; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_guiStep.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_guiStep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IDC_ST0 = common dso_local global i32 0, align 4
@progressGroup = common dso_local global i32 0, align 4
@progressCurr = common dso_local global i32 0, align 4
@dialog = common dso_local global i32 0, align 4
@PBM_SETPOS = common dso_local global i32 0, align 4
@progressScale = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @guiStep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @guiStep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @IDC_ST0, align 4
  %6 = load i32, i32* @progressGroup, align 4
  %7 = mul nsw i32 %6, 2
  %8 = add nsw i32 %5, %7
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i8* @vstrmake(i32* null, i32 %9)
  store i8* %10, i8** %4, align 8
  %11 = load i32, i32* @progressCurr, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @progressCurr, align 4
  %13 = load i32, i32* @dialog, align 4
  %14 = load i32, i32* %3, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @SetDlgItemText(i32 %13, i32 %14, i8* %15)
  %17 = load i32, i32* @dialog, align 4
  %18 = load i32, i32* %3, align 4
  %19 = add nsw i32 %18, 1
  %20 = load i32, i32* @PBM_SETPOS, align 4
  %21 = load i32, i32* @progressScale, align 4
  %22 = load i32, i32* @progressCurr, align 4
  %23 = mul nsw i32 %21, %22
  %24 = call i32 @SendDlgItemMessage(i32 %17, i32 %19, i32 %20, i32 %23, i32 0)
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @free(i8* %25)
  ret i32 0
}

declare dso_local i8* @vstrmake(i32*, i32) #1

declare dso_local i32 @SetDlgItemText(i32, i32, i8*) #1

declare dso_local i32 @SendDlgItemMessage(i32, i32, i32, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
